Adds GA tracking, updates meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Park People</title>
+    <title>TD Park People Grants</title>
+    <meta name="description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks.">
+    <meta property="og:image" content="" />
     <script src="https://use.fontawesome.com/ac16a4e359.js"></script>
   </head>
   <body>
