--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>TD Park People Grants</title>
     <meta name="description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks.">
     <meta property="og:image" content="" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
     <script src="https://use.fontawesome.com/ac16a4e359.js"></script>
   </head>
   <body>
