Edits meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>TD Park People Grants</title>
     <meta name="description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks.">
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
+    <meta property="og:title" content="TD Park People Grants"/>
+    <meta property="og:site_name" content="TD Park People Grants"/>
+    <meta property="og:description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks."/>
+    <meta property="og:image" content="https://parkpeople.ca/listings/custom/uploads/2018/01/park_people_grants_social.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Park_People" />
+    <meta name="twitter:creator" content="@Park_People" />
+    <meta name="twitter:image" content="https://parkpeople.ca/listings/custom/uploads/2018/01/park_people_grants_social.png" />  
+
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
