--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script>
     <script src="dist/build.js"></script>
   </body>
 </html>
