--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <div id="app"></div>
     <!-- <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script> -->
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
-    <script src="dist/build.js"></script>
+    <script src="dist/build.js?v=180306557am"></script>
   </body>
 </html>
