Updates build path

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGPGQX8oq7dF3OTm4OV-UiAKX_nr4_2w"></script>
     <!-- <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script> -->
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
-    <script src="dist/build.js?v=180306557am"></script>
+    <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=180306557am"></script>
   </body>
 </html>
