--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
     <script src="https://use.fontawesome.com/ac16a4e359.js"></script>
+    <script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGPGQX8oq7dF3OTm4OV-UiAKX_nr4_2w"></script>
     <!-- <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script> -->
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM"></script>
     <script src="dist/build.js?v=180306557am"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&callback=initMap" -->
+    async defer></script>
   </body>
 </html>
