Sets up map search

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="app"></div>
     <!-- <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script> -->
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
     <script src="dist/build.js?v=180306557am"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&callback=initMap" -->
