Updates build version

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
-    <script src="dist/build.js?v=1804231051am"></script>
+    <script src="dist/build.js?v=1804231252pm"></script>
     <script src="src/assets/js/wow.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
