--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script src="dist/build.js"></script> -->
-    <script src="http://hypelabs.ca/grants2019/dist/build.js"></script>
+    <script src="dist/build.js"></script>
+    <!-- <script src="http://hypelabs.ca/grants2019/dist/build.js"></script> -->
   </body>
 </html>
