--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="dist/build.js?v=190109-29c9c29cn9n9"></script>
+    <script src="dist/build.js?v=190109-9j24v2323"></script>
     <!-- <script src="http://hypelabs.ca/grants2019/dist/build.js"></script> -->
   </body>
 </html>
