--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="dist/build.js?v=190109-9j24v2323"></script>
-    <!-- <script src="http://hypelabs.ca/grants2019/dist/build.js"></script> -->
+    <!-- <script src="/dist/build.js?v=190109-9j24v2323"></script> -->
+    <script src="http://hypelabs.ca/grants2019/dist/build.js?v=osmcemiw5562223c2d2"></script>
+    <!-- <script src="http://localhost:8080/dist/build.js"></script> -->
   </body>
 </html>
