--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=190116-9j24v2323"></script>
+    <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=190116-490d0wjd939"></script>
     <!-- <script src="http://hypelabs.ca/grants2019/dist/build.js?v=osmcemiw5562223c2d2"></script> -->
     <!-- <script src="http://localhost:8080/dist/build.js"></script> -->
   </body>
