--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=190116-490d0wjd939"></script>
+    <script src="https://parkpeople.ca/parkgrants/dist/build190116v1.js"></script>
     <!-- <script src="http://hypelabs.ca/grants2019/dist/build.js?v=osmcemiw5562223c2d2"></script> -->
-    <!-- <script src="http://localhost:8080/dist/build.js"></script> -->
+    <!-- <script src="http://localhost:8080/dist/build190116v1.js"></script> -->
   </body>
 </html>
