--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>TD Park People Grants</title>
-    <meta name="description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks.">
+    <meta name="description" content="TD Park People Grants will provide $2000 to groups from Metro Vancouver, Calgary, Edmonton, Greater Toronto Area, Ottawa, Montreal and Halifax Regional Municipality to help make community events happen in our green spaces. ">
     <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
     <meta property="og:title" content="TD Park People Grants"/>
     <meta property="og:site_name" content="TD Park People Grants"/>
-    <meta property="og:description" content="TD Park People Grants will provide $2000 to groups from Vancouver, Calgary, Toronto, Ottawa and Montreal to help make community events happen in parks."/>
+    <meta property="og:description" content="TD Park People Grants will provide $2000 to groups from Metro Vancouver, Calgary, Edmonton, Greater Toronto Area, Ottawa, Montreal and Halifax Regional Municipality to help make community events happen in our green spaces."/>
     <meta property="og:image" content="https://parkpeople.ca/listings/custom/uploads/2018/01/park_people_grants_social.png" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
