--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="TD Park People Grants"/>
     <meta property="og:site_name" content="TD Park People Grants"/>
     <meta property="og:description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive."/>
-    <meta property="og:image" content="https://parkpeople.ca/listings/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />
+    <meta property="og:image" content="https://parkpeople.ca/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Park_People" />
     <meta name="twitter:creator" content="@Park_People" />
-    <meta name="twitter:image" content="https://parkpeople.ca/listings/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />  
+    <meta name="twitter:image" content="https://parkpeople.ca/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />  
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
@@ -27,8 +27,8 @@
     <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
-    <script src="dist/190408-build.js"></script>
-    <!-- <script src="dist/build.js"></script> -->
+    <!-- <script src="dist/190408-build.js"></script> -->
+    <script src="dist/build.js"></script>
     <script src="src/assets/js/wow.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
