--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script src="http://dev.hypenotic.com/park-grants-v2/dist/build.js?v=1802091043am"></script> -->
-    <!-- <script src="https://parkpeople.ca/parkgrants/dist/build.js?v=180306519am"></script> -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
-    <!-- <script src="dist/build.js"></script> -->
-    <script src="dist/190620v2-build.js"></script>
-    <script src="src/assets/js/wow.min.js"></script>
+    <script src="dist/build.js"></script>
+    <script src="dist/190626v2-build.js"></script>
+    <!-- <script src="src/assets/js/wow.min.js"></script> -->
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
         new WOW({
