--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <title>TD Park People Grants</title>
+    <title>TD Park People Grants 2018</title>
     <meta name="description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive.">
-    <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
+    <meta property="og:url" content="https://parkpeople.ca/parkgrants2018/"/>
     <meta property="og:title" content="TD Park People Grants"/>
     <meta property="og:site_name" content="TD Park People Grants"/>
     <meta property="og:description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive."/>
-    <meta property="og:image" content="https://parkpeople.ca/listings/custom/uploads/2018/04/TDParkPeopleGrants_Share.jpg" />
+    <meta property="og:image" content="https://parkpeople.ca/custom/uploads/2018/04/TDParkPeopleGrants_Share.jpg" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Park_People" />
     <meta name="twitter:creator" content="@Park_People" />
-    <meta name="twitter:image" content="https://parkpeople.ca/listings/custom/uploads/2018/04/TDParkPeopleGrants_Share.jpg" />  
+    <meta name="twitter:image" content="https://parkpeople.ca/custom/uploads/2018/04/TDParkPeopleGrants_Share.jpg" />  
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
