--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
     <script src="dist/build.js"></script>
     <script src="dist/190626v2-build.js"></script>
-    <!-- <script src="src/assets/js/wow.min.js"></script> -->
+    <script src="src/assets/js/wow.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
         new WOW({
