--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive.">
     <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
     <meta property="og:title" content="TD Park People Grants"/>
-    <meta property="og:site_name" content="TD Park People Grants"/>
+    <meta property="og:site_name" content="TD Park People Grants 2019"/>
     <meta property="og:description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive."/>
     <meta property="og:image" content="https://parkpeople.ca/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />
     <meta property="og:type" content="website" />
@@ -23,10 +23,10 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6SyhFeGyRXakUOo6WbZsRrFMaOgaOgYM&libraries=geometry,places"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
     <script src="dist/build.js"></script>
-    <script src="dist/190626v2-build.js"></script>
+    <!-- <script src="dist/190626v2-build.js"></script> -->
     <script src="src/assets/js/wow.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
