created phase-three-2020, nowhere near finished but it is pulling from correct WORDPRESS page 16208

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <title>TD Park People Grants</title>
+    <title>TD Park People Grants 2020</title>
     <meta name="description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive.">
     <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
     <meta property="og:title" content="TD Park People Grants"/>
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.min.js"></script>
     <script src="dist/build.js"></script>
     <script src="dist/190626v2-build.js"></script>
-    <!-- <script src="src/assets/js/wow.min.js"></script> -->
+    <script src="src/assets/js/wow.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
         new WOW({
