--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>TD Park People Grants 2019</title>
     <meta name="description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive.">
-    <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
+    <meta property="og:url" content="https://parkpeople.ca/parkgrants2019"/>
     <meta property="og:title" content="TD Park People Grants"/>
     <meta property="og:site_name" content="TD Park People Grants 2019"/>
     <meta property="og:description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive."/>
