--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TD Park People Grants 2020</title>
     <meta name="description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive.">
     <meta property="og:url" content="https://parkpeople.ca/parkgrants/"/>
-    <meta property="og:title" content="TD Park People Grants"/>
+    <meta property="og:title" content="TD Park People Grants 2020"/>
     <meta property="og:site_name" content="TD Park People Grants"/>
     <meta property="og:description" content="TD Park People Grants are helping community groups host over 160 great events in city parks across Canada. When we gather together in our parks people are happier, communities are more connected and cities thrive."/>
     <meta property="og:image" content="https://parkpeople.ca/custom/uploads/2019/04/TDGrants_ShareAssets_Twitter_Wordmark_English.jpg" />
